--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,8 @@
     padding: 0;
 }
 body{
+    background: #000;    /* default black */
+    color: #fff;
     height: 100vh;
-    background: black;
-    color: white;
     font-family: 'outfit';
 }
